// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Day /> should match snapshot for NOT present day and NOT selected 1`] = `
<div>
  <button
    class="day"
    type="button"
    value="2020-01-02T00:00:00.000Z"
  >
    2
  </button>
</div>
`;

exports[`<Day /> should match snapshot for NOT present day and selected 1`] = `
<div>
  <button
    class="day selected"
    type="button"
    value="2020-01-02T00:00:00.000Z"
  >
    2
  </button>
</div>
`;

exports[`<Day /> should match snapshot for present day and NOT selected 1`] = `
<div>
  <button
    class="day is-today"
    type="button"
    value="2020-01-01T00:00:00.000Z"
  >
    1
  </button>
</div>
`;

exports[`<Day /> should match snapshot for present day and selected 1`] = `
<div>
  <button
    class="day selected is-today"
    type="button"
    value="2020-01-01T00:00:00.000Z"
  >
    1
  </button>
</div>
`;

exports[`<DayPicker /> should match snapshot 1`] = `
<div>
  <div
    class="day-picker"
  >
    <button
      class="day selected is-today"
      type="button"
      value="2020-01-01T00:00:00.000Z"
    >
      1
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-02T00:00:00.000Z"
    >
      2
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-03T00:00:00.000Z"
    >
      3
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-04T00:00:00.000Z"
    >
      4
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-05T00:00:00.000Z"
    >
      5
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-06T00:00:00.000Z"
    >
      6
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-07T00:00:00.000Z"
    >
      7
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-08T00:00:00.000Z"
    >
      8
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-09T00:00:00.000Z"
    >
      9
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-10T00:00:00.000Z"
    >
      10
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-11T00:00:00.000Z"
    >
      11
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-12T00:00:00.000Z"
    >
      12
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-13T00:00:00.000Z"
    >
      13
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-14T00:00:00.000Z"
    >
      14
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-15T00:00:00.000Z"
    >
      15
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-16T00:00:00.000Z"
    >
      16
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-17T00:00:00.000Z"
    >
      17
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-18T00:00:00.000Z"
    >
      18
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-19T00:00:00.000Z"
    >
      19
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-20T00:00:00.000Z"
    >
      20
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-21T00:00:00.000Z"
    >
      21
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-22T00:00:00.000Z"
    >
      22
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-23T00:00:00.000Z"
    >
      23
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-24T00:00:00.000Z"
    >
      24
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-25T00:00:00.000Z"
    >
      25
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-26T00:00:00.000Z"
    >
      26
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-27T00:00:00.000Z"
    >
      27
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-28T00:00:00.000Z"
    >
      28
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-29T00:00:00.000Z"
    >
      29
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-30T00:00:00.000Z"
    >
      30
    </button>
    <button
      class="day"
      type="button"
      value="2020-01-31T00:00:00.000Z"
    >
      31
    </button>
  </div>
</div>
`;
